--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,14 @@ version: 1.0.0+1
 environment:
   sdk: ^3.7.0
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.5
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
   assets:
