--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,15 @@ version: 1.0.0+1
 environment:
   sdk: ^3.7.0
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.5
   go_router: ^14.8.1
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
   assets:
@@ -25,4 +26,4 @@ flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/helpers
   filename: assets.dart
-  field_prefix:
+  field_prefix: null
