--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.5
+  font_awesome_flutter: ^10.8.0
   go_router: ^14.8.1
+  google_nav_bar: ^5.0.7
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
