--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,11 @@ environment:
   sdk: ^3.7.0
 dependencies:
   cupertino_icons: ^1.0.8
+  device_preview: ^1.2.0
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.5
+  flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.8.0
   go_router: ^14.8.1
   google_nav_bar: ^5.0.7
