--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
+  dots_indicator: ^4.0.1
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.5
