--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: ^3.7.0
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   device_preview: ^1.2.0
   dio: ^5.8.0+1
   dots_indicator: ^4.0.1
