--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 1.0.0+1
 environment:
   sdk: ^3.7.0
 dependencies:
+  bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
@@ -12,6 +13,7 @@ dependencies:
   dots_indicator: ^4.0.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   flutter_native_splash: ^2.4.5
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.8.0
