--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   device_preview: ^1.2.0
   dio: ^5.8.0+1
   dots_indicator: ^4.0.1
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
