--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,11 @@ dependencies:
   dio: ^5.8.0+1
   dots_indicator: ^4.0.1
   firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.8.0
