--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
   flutter_screenutil: ^5.9.3
+  flutter_stripe: ^11.4.0
   font_awesome_flutter: ^10.8.0
   go_router: ^14.8.1
   google_nav_bar: ^5.0.7
