--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   go_router: ^14.8.1
   google_nav_bar: ^5.0.7
+  intl: ^0.19.0
   shared_preferences: ^2.5.2
 dev_dependencies:
   flutter_lints: ^5.0.0
