--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   device_preview: ^1.2.0
   dio: ^5.8.0+1
   dots_indicator: ^4.0.1
+  easy_loading_button: ^0.3.2
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
   flutter:
@@ -27,6 +28,7 @@ dependencies:
   go_router: ^14.8.1
   google_nav_bar: ^5.0.7
   intl: ^0.19.0
+  rounded_loading_button_plus: ^3.0.1
   shared_preferences: ^2.5.2
 dev_dependencies:
   flutter_lints: ^5.0.0
